--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=9193
-
+spring.profiles.active=qa
 spring.datasource.url=jdbc:mysql://localhost:3306/vehicle
 spring.datasource.username=root
 spring.datasource.password=mysql
